<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_draw"
        android:title="@string/draw_menu"
        android:icon="@drawable/baseline_brush_24"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_correct_text"
        android:title="Correct Text"
        android:icon="@drawable/ic_spellcheck"
        app:showAsAction="ifRoom"
        android:contentDescription="Correct spelling and grammar" />


    <item
        android:id="@+id/action_save"
        android:title="@string/save_menu"
        android:iconTint="@color/white"

        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_color"
        android:title="@string/color_menu"
        android:icon="@drawable/ic_color_lens"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/action_pin_unpin"
        android:title="@string/pin_menu"
        android:icon="@drawable/ic_pin"
        />
</menu>
