<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="16dp"
    android:fitsSystemWindows="true"
    android:background="#F3F3F3">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feedback_form_heading"
        android:fontFamily="sans-serif"
        android:textSize="20sp"
        android:textColor="#252323"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="16dp"/>

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint_text"
        android:textColorHint="#838A8A8A"
        android:fontFamily="sans-serif"
        android:textColor="@color/black"
        android:inputType="textPersonName"
        android:padding="12dp"/>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/feedback_email_text"
        android:textColorHint="#838A8A8A"
        android:textColor="#1B0B0B"
        android:inputType="textEmailAddress"
        android:fontFamily="sans-serif"
        android:padding="12dp"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/editTextFeedback"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="top"
        android:textColorHint="#838A8A8A"
        android:textColor="@color/black"
        android:hint="@string/feedback_text"
        android:inputType="textMultiLine"
        android:padding="12dp"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feedback_submit_button"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="#2196F3"
        android:textColor="@android:color/white"/>

</LinearLayout>