<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/note_card_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:soundEffectsEnabled="true"
    android:clickable="true"
    android:focusable="true"
    app:cardCornerRadius="16dp"
    app:cardElevation="4dp"
    android:foreground="?android:attr/selectableItemBackground">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            android:id="@+id/widget_list_item_root"
            android:background="@color/white"
            android:layout_margin="4dp"
            >
            <TextView
                android:id="@+id/widget_note_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/note_title_widget"
                android:textColor="@color/black"
                android:textStyle="bold"

                android:textSize="14sp"
                android:singleLine="true"
                android:ellipsize="end" />

            <TextView
                android:id="@+id/widget_note_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/note_preview"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:maxLines="2"
                android:ellipsize="end" />


            <ImageView
                android:id="@+id/noteDrawingImageView"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/note_drawing"
                android:scaleType="centerCrop"
                android:visibility="gone" />
            <TextView
                android:id="@+id/noteDateTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif"
                android:gravity="right"
                android:textSize="12sp" />

            <!-- New: LinearLayout for labels -->
            <LinearLayout
                android:id="@+id/labels_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:gravity="left" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/general_text"
                    android:id="@+id/labeltext1"
                    android:paddingLeft="11dp"
                    android:paddingRight="11dp"
                    android:textSize="8sp"
                    android:paddingTop="4dp"
                    android:paddingBottom="5dp"
                    android:background="@drawable/rounded_purple_background"
                    android:textColor="@color/white"
                    android:layout_marginEnd="7dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/general_text"
                    android:id="@+id/labeltext2"
                    android:textSize="8sp"
                    android:paddingLeft="11dp"
                    android:paddingRight="11dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="5dp"
                    android:background="@drawable/rounded_purple_background"
                    android:textColor="@color/white"
                    />
            </LinearLayout>
        </LinearLayout>
</androidx.cardview.widget.CardView>